--- a/frontend/app/templates/dashboard-layout.html
+++ b/frontend/app/templates/dashboard-layout.html
@@ -48,7 +48,7 @@
           <li class="nav-item"><a href="#" onclick="window.location.href='{{url_for('faq')}}'" class="nav-link px-2 link-dark">Help</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="bi bi-person-circle"></i>   Account
+              <i class="bi bi-person-circle"></i>   {{ username }}
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{{url_for('profile')}}">Account Settings</a></li>
