navigation bar changes

--- a/frontend/app/templates/faq/faq.html
+++ b/frontend/app/templates/faq/faq.html
@@ -1,4 +1,8 @@
-{% extends "marketing-layout.html" %}
+{% if isAuthenticated %}
+  {% include 'dashboard-layout.html' %}
+{% else %}
+  {% include 'marketing-layout.html' %}
+{% endif %}
 
 {% block pageCss%}
 <style>
