--- a/frontend/app/templates/register/register.html
+++ b/frontend/app/templates/register/register.html
@@ -1,1 +1,5 @@
-{% extends "marketing-layout.html" %}
+{% if isAuthenticated %}
+  {% include 'dashboard-layout.html' %}
+{% else %}
+  {% include 'marketing-layout.html' %}
+{% endif %}
