--- a/frontend/app/templates/user-dashboard/dashboard.html
+++ b/frontend/app/templates/user-dashboard/dashboard.html
@@ -69,6 +69,39 @@
     <!-- END OF USER TABLES -->
   </main>
 
+  <!-- SIDEBAR MENU -->
+<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+  <div class="position-sticky pt-3 sidebar-sticky">
+    <ul class="nav flex-column">
+      <li class="nav-item" id="my-documents">
+        <a class="nav-link active" aria-current="page" href="#" id="my-documents" onclick="getfilelist()">
+          <i class="bi bi-file-earmark-bar-graph-fill" style="font-size: 16px; padding-right: 5px;"></i>
+          My Documents
+        </a>
+      </li>
+      <li class="nav-item" id="shared">
+        <a class="nav-link" href="#" onclick="sharedlist()">
+          <i class="bi bi-share-fill" style="font-size: 16px; padding-right: 5px;"></i>
+          Shared By Others
+        </a>
+      </li>
+      <li class="nav-item" id="archived">
+        <a class="nav-link" href="#">
+          <i class="bi bi-archive-fill" style="font-size: 16px; padding-right: 5px;"></i>
+          Archived
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="trashed" href="#" onclick="trashlist()">
+          <i class="bi bi-trash3-fill" style="font-size: 16px; padding-right: 5px;"></i>
+          Trash
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
+  
+
 {% endblock %}
 
 {% block pageJS%}
