Grammar Check initial frontend update

--- a/frontend/app/static/css/editor-layout.css
+++ b/frontend/app/static/css/editor-layout.css
@@ -172,3 +172,9 @@ html {
   :not(pre) > code[class*="language-"], pre[class*="language-"] {
       background: #444;
   }
+
+  .highlight {
+    background-color: yellow;
+    font-weight: bold;
+  }
+  
