--- a/frontend/app/templates/editor-layout.html
+++ b/frontend/app/templates/editor-layout.html
@@ -1,36 +1,44 @@
 {% extends "base.html" %}
 
 {% block layoutCss %}
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard-layout.css') }}">
-  <link rel="stylesheet" href="https://prismjs.com/themes/prism.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://prismjs.com/plugins/line-numbers/prism-line-numbers.css">
-  <link rel="stylesheet" href="https://live.prismjs.com/prism-live.css">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/editor-layout.css') }}">
-  <style>
-    .animate-spin{
-      display: inline-block;
-      animation-name: spin;
-      animation-duration: 1000ms;
-      animation-iteration-count: infinite;
-      animation-timing-function: linear; 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard-layout.css') }}">
+<link rel="stylesheet" href="https://prismjs.com/themes/prism.css" crossorigin="anonymous"
+  referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://prismjs.com/plugins/line-numbers/prism-line-numbers.css">
+<link rel="stylesheet" href="https://live.prismjs.com/prism-live.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/editor-layout.css') }}">
+<style>
+  .animate-spin {
+    display: inline-block;
+    animation-name: spin;
+    animation-duration: 1000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
     }
-    @keyframes spin {
-        from {
-            transform:rotate(0deg);
-        }
-        to {
-            transform:rotate(360deg);
-        }
+
+    to {
+      transform: rotate(360deg);
     }
-    .nav-link{
-      cursor: pointer;
-    }
-    .assets-menu li a{
-      padding:12px;
-    }
-    .assets-menu li{margin-bottom:1px;}
-  </style>
-  {% block pageCss %}{% endblock%}
+  }
+
+  .nav-link {
+    cursor: pointer;
+  }
+
+  .assets-menu li a {
+    padding: 12px;
+  }
+
+  .assets-menu li {
+    margin-bottom: 1px;
+  }
+</style>
+{% block pageCss %}{% endblock%}
 {% endblock %}
 
 {% block layout %}
@@ -39,14 +47,15 @@
 
 <nav class="navbar navbar-expand-lg bd-navbar bg-light">
   <div class="container-fluid">
-    
+
     <a href="/dashboard" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
       <span class="header-text">
         <i class="bi bi-house-door-fill"></i>
       </span>
     </a>
     <button class="btn btn-outline"><i class="bi bi-fullscreen" id="f-icon"></i></button>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="input-group form-floating" id="filename-input-wrapper">
@@ -55,7 +64,8 @@
       <span class="input-group-text" onclick="createFile()" id="save-file-name"><i class="bi bi-check"></i></span>
     </div>
     <div id="sync-status" style="font-size:11px; color:rgb(122, 122, 122);padding-left:8px;opacity:0;">
-     <span id="is-spin" class="animate-spin"> <i id="sync-icon" class="bi bi-arrow-repeat"></i> </span> <span style="margin-left:3px;" id="sync-text">Saving File</span>
+      <span id="is-spin" class="animate-spin"> <i id="sync-icon" class="bi bi-arrow-repeat"></i> </span> <span
+        style="margin-left:3px;" id="sync-text">Saving File</span>
     </div>
     <!-- MOBILE RESPONSIVE MENU -->
     <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -65,10 +75,14 @@
       </div>
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item" ><a id="grammarCheckClick" data-bs-toggle="offcanvas" href="#offcanvasGrammarCheck" class="nav-link px-2 link-dark"><i class="bi bi-grammarcheck"></i> Grammar Check</a></li>
-          <li class="nav-item" ><a id="button-pdf" class="nav-link px-2 link-dark"><i class="bi bi-download"></i> Download as PDF</a></li>
-          <li class="nav-item" ><a data-bs-toggle="offcanvas" href="#offcanvasAssets"  class="nav-link px-2 link-dark"><i class="bi bi-paperclip"></i> Assets</a></li>
-          <li class="nav-item"><a id="historyClick" data-bs-toggle="offcanvas" href="#offcanvasHistory" class="nav-link px-2 link-dark"><i class="bi bi-clock-history"></i> History</a></li>
+          <li class="nav-item"><a id="grammarCheckClick" data-bs-toggle="offcanvas" href="#offcanvasGrammarCheck"
+              class="nav-link px-2 link-dark"><i class="bi bi-grammarcheck"></i> Grammar Check</a></li>
+          <li class="nav-item"><a id="button-pdf" class="nav-link px-2 link-dark"><i class="bi bi-download"></i>
+              Download as PDF</a></li>
+          <li class="nav-item"><a data-bs-toggle="offcanvas" href="#offcanvasAssets" class="nav-link px-2 link-dark"><i
+                class="bi bi-paperclip"></i> Assets</a></li>
+          <li class="nav-item"><a id="historyClick" data-bs-toggle="offcanvas" href="#offcanvasHistory"
+              class="nav-link px-2 link-dark"><i class="bi bi-clock-history"></i> History</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="bi bi-person-circle"></i> Account
@@ -88,12 +102,12 @@
       </div>
     </div>
 
-    
+
 
 
   </div>
 
-  
+
 
 </nav>
 
@@ -107,16 +121,19 @@
     <div class="border-top mt-3">
       <ul class="assets-menu list-unstyled">
         <li><a class="dropdown-item" href="#">
-          <div class="d-flex justify-content-between"><span>Flowchart.png</span><i class="bi bi-trash text-default"></i></div>
-        </a></li>
+            <div class="d-flex justify-content-between"><span>Flowchart.png</span><i
+                class="bi bi-trash text-default"></i></div>
+          </a></li>
 
         <li><a class="dropdown-item" href="#">
-          <div class="d-flex justify-content-between"><span>wireframes.jpg</span><i class="bi bi-trash text-default"></i></div>
-        </a></li>
+            <div class="d-flex justify-content-between"><span>wireframes.jpg</span><i
+                class="bi bi-trash text-default"></i></div>
+          </a></li>
 
         <li><a class="dropdown-item" href="#">
-          <div class="d-flex justify-content-between"><span>Data-Flow.jpg</span><i class="bi bi-trash text-default"></i></div>
-        </a></li>
+            <div class="d-flex justify-content-between"><span>Data-Flow.jpg</span><i
+                class="bi bi-trash text-default"></i></div>
+          </a></li>
 
       </ul>
     </div>
@@ -126,21 +143,12 @@
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasHistory" aria-labelledby="offcanvasExampleLabel">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasExampleLabel">History</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" ></button>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
-  <div class="container" id="historyDetailsDiv">
+    <div class="container" id="historyDetailsDiv">
 
-  </div>
-    <!-- <div>
-      <ul class="assets-menu list-unstyled">
-        <li><a class="dropdown-item" href="#"><b>Name one</b><br/><small>June 6th, 2022</small></a></li>
-        <li><a class="dropdown-item" href="#"><b>Name one</b><br/><small>June 6th, 2022</small></a></li>
-        <li><a class="dropdown-item" href="#"><b>Name one</b><br/><small>June 6th, 2022</small></a></li>
-        <li><a class="dropdown-item" href="#"><b>Name one</b><br/><small>June 6th, 2022</small></a></li>
-        
-      </ul>
-    </div> -->
+    </div>
   </div>
 </div>
 
@@ -152,7 +160,7 @@
   </div>
   <div class="offcanvas-body">
     <div class="container" id="error-list">
-      
+
     </div>
   </div>
 </div>
@@ -173,58 +181,59 @@
 {% endblock %}
 
 {% block layoutJS %}
-  <script src="https://prismjs.com/prism.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://prismjs.com/plugins/autoloader/prism-autoloader.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://live.prismjs.com/src/prism-live.js"  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://prismjs.com/components/prism-latex.min.js"></script>  
-  <script src="https://prismjs.com/plugins/line-numbers/prism-line-numbers.js"></script>  
-  
-  <script src="{{url_for('static',filename='js/node_modules/latex.js/dist/latex.js')}}"></script>  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+<script src="https://prismjs.com/prism.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://prismjs.com/plugins/autoloader/prism-autoloader.js" crossorigin="anonymous"
+  referrerpolicy="no-referrer"></script>
+<script src="https://live.prismjs.com/src/prism-live.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://prismjs.com/components/prism-latex.min.js"></script>
+<script src="https://prismjs.com/plugins/line-numbers/prism-line-numbers.js"></script>
 
-  <script> 
-    $(document).ready(function(){
-      var downloadPdfBtn = document.getElementById("button-pdf");
-      downloadPdfBtn.addEventListener("click", function () {
-       generateHTMLContent('print');
-      });
+<script src="{{url_for('static',filename='js/node_modules/latex.js/dist/latex.js')}}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
 
-      $('#f-icon').click(function(){
-        $('#f-icon').toggleClass('bi-fullscreen');
-        $('#f-icon').toggleClass('bi-fullscreen-exit');
-      });
-      
-
-      $('#filename-input').on('keyup',_.debounce(function(event){
-        documentObject.DocName=$('#filename-input').val();
-       // saveFile();
-      },300));
-
+<script>
+  $(document).ready(function () {
+    var downloadPdfBtn = document.getElementById("button-pdf");
+    downloadPdfBtn.addEventListener("click", function () {
+      generateHTMLContent('print');
     });
-    
-    function showSyncStatus(icon,status,spin,error=false){
-      console.log('-------',status,'--------');
-      $syncStatus=document.getElementById('sync-status');
-      $syncText=document.getElementById('sync-text');
-      $syncIcon=document.getElementById('sync-icon');
-      $isSpin=document.getElementById('is-spin');
 
-      $syncIcon.classList.value='bi bi-'+icon;
-      $syncText.innerHTML=status;
-      $isSpin.classList.value=(spin?'animate-spin':'');
+    $('#f-icon').click(function () {
+      $('#f-icon').toggleClass('bi-fullscreen');
+      $('#f-icon').toggleClass('bi-fullscreen-exit');
+    });
 
-      $syncStatus.style.opacity=1;
-      $syncStatus.classList.value=(error?'text-danger':'');
-    }
 
-    function hideSyncStatus(){
-      $syncStatus.style.opacity=0;
-    }
+    $('#filename-input').on('keyup', _.debounce(function (event) {
+      documentObject.DocName = $('#filename-input').val();
+      // saveFile();
+    }, 300));
 
-  </script>
-  <script src="../js/history.js"></script>
-  <script src="../js/grammarcheck.js"></script>
+  });
 
-  {% block pageJS %}{% endblock%}
+  function showSyncStatus(icon, status, spin, error = false) {
+    console.log('-------', status, '--------');
+    $syncStatus = document.getElementById('sync-status');
+    $syncText = document.getElementById('sync-text');
+    $syncIcon = document.getElementById('sync-icon');
+    $isSpin = document.getElementById('is-spin');
+
+    $syncIcon.classList.value = 'bi bi-' + icon;
+    $syncText.innerHTML = status;
+    $isSpin.classList.value = (spin ? 'animate-spin' : '');
+
+    $syncStatus.style.opacity = 1;
+    $syncStatus.classList.value = (error ? 'text-danger' : '');
+  }
+
+  function hideSyncStatus() {
+    $syncStatus.style.opacity = 0;
+  }
+
+</script>
+<script src="../js/history.js"></script>
+<script src="../js/grammarcheck.js"></script>
+
+{% block pageJS %}{% endblock%}
 
 {% endblock %}
