--- a/frontend/app/templates/latex-editor/editor.html
+++ b/frontend/app/templates/latex-editor/editor.html
@@ -1,16 +1,17 @@
 {% extends "editor-layout.html" %}
 
 {% block pageCss%}
- <style>
-  
- </style>
+<style>
+
+</style>
 {% endblock %}
 
 {% block body %}
 <main class="container-fluid body-main mt-2 bg-light">
-    <div class="d-flex align-items-stretch flex-wrap re-flex" style="height: calc(100% - 63px)">
-      <input type="hidden" id="doc_id" name="docid" value="{{doc_id}}" />
-      <textarea id="editor-text" onkeyup="documentObject.DocText=this.value" class="form-control prism-live language-latex">{% if params['template']=='resume' %}\documentclass{article}
+  <div class="d-flex align-items-stretch flex-wrap re-flex" style="height: calc(100% - 63px)">
+    <input type="hidden" id="doc_id" name="docid" value="{{doc_id}}" />
+    <textarea id="editor-text" onkeyup="documentObject.DocText=this.value"
+      class="form-control prism-live language-latex">{% if params['template']=='resume' %}\documentclass{article}
 \usepackage{comment, multicol}
 \usepackage{hyperref}
 \usepackage{calc,pict2e,picture}
@@ -35,45 +36,49 @@ In the appendix, the API as well as the format of custom macro definitions in Ja
 \section{Personal Details}
 \end{document}        
 {% endif %}</textarea>
-      <iframe id="html-preview" sandbox="allow-same-origin allow-scripts" srcdoc="" class="shadow p-3 bg-body rounded item"></iframe>
-    </div>
-  </main>
+    <iframe id="html-preview" sandbox="allow-same-origin allow-scripts" srcdoc=""
+      class="shadow p-3 bg-body rounded item"></iframe>
+  </div>
+</main>
 {% endblock %}
 
 {% block pageJS%}
 <script src="{{url_for('static',filename="js/clientStorage.js")}}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js" integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="{{url_for('static',filename="js/savefile.js")}}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.1.3/axios.min.js"
+  integrity="sha512-0qU9M9jfqPw6FKkPafM3gy2CBAvUWnYVOfNPDYKVuRTel1PrciTj+a9P3loJB+j0QmN2Y0JYQmkBBS8W+mbezg=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-  var params = {{params|tojson|safe}}
+  var params = {{ params| tojson | safe}}
   var template = params.hasOwnProperty('template') ? params.template : '';
-  var documentObject={
-         "DocId": 0,
-         "DocName": "",
-         "DocText":"",
-         "IsUpload":0,
-         "RefDocId":0
-      };
-  
-  
+  var documentObject = {
+    "DocId": 0,
+    "DocName": "",
+    "DocText": "",
+    "IsUpload": 0,
+    "RefDocId": 0
+  };
 
-  $(document).ready(function(){
+
+
+  $(document).ready(function () {
     axios.defaults.headers.common['authToken'] = getUserToken();
     axios.defaults.headers.post['Content-Type'] = 'application/json';
 
-    var doc_id=$('#doc_id').val();
-    window.$editor=document.getElementById('editor-text');
-    window.$htmlPreview=document.getElementById('html-preview');
-    documentObject.DocText=$editor.textContent;
-    $editor.addEventListener('keyup',_.debounce(function(event){
+    var doc_id = $('#doc_id').val();
+    window.$editor = document.getElementById('editor-text');
+    window.$htmlPreview = document.getElementById('html-preview');
+    documentObject.DocText = $editor.textContent;
+    $editor.addEventListener('keyup', _.debounce(function (event) {
       generateHTMLContent('preview');
-    },300));
-    
-    if(doc_id!='new-document'){
-      
-      axios.post(getApiUrl('fileview'),{DocId:doc_id}).then(function(response){
-        documentObject=response.data;
-        showSyncStatus('check','Document Retrived',false,false);
-        if(documentObject.hasOwnProperty('DocText')){
+    }, 300));
+
+    if (doc_id != 'new-document') {
+
+      axios.post(getApiUrl('fileview'), { DocId: doc_id }).then(function (response) {
+        documentObject = response.data;
+        showSyncStatus('check', 'Document Retrived', false, false);
+        if (documentObject.hasOwnProperty('DocText')) {
           $($editor).text(documentObject.DocText).trigger('keyup');
           $($('code')[0]).text(documentObject.DocText);
           Prism.highlightAll();
@@ -81,92 +86,71 @@ In the appendix, the API as well as the format of custom macro definitions in Ja
           //$($('pre')[0]).text(documentObject.DocText).trigger('keyup');
           $('#filename-input').val(documentObject.DocName);
           $('#filename-input-label').text('Filename');
-          $('#filename-input').prop('disabled',true);
+          $('#filename-input').prop('disabled', true);
         }
-        else{
-          showSyncStatus('bug-fill','Unable to Fetch File',false,true);
+        else {
+          showSyncStatus('bug-fill', 'Unable to Fetch File', false, true);
         }
-        
-      }).catch(function(error){
-        showSyncStatus('bug-fill','Error While Fetching File',false,true);
+
+      }).catch(function (error) {
+        showSyncStatus('bug-fill', 'Error While Fetching File', false, true);
       });
-      
-      
+
+
     }
-    else if(documentObject.DocId==0){
-      $('#filename-input').attr('placeholder',(template=='resume' ? 'Untitled Resume' : 'Untitled Document'));
-      $('#filename-input-label').text(template=='resume' ? 'Untitled Resume' : 'Untitled Document');
+    else if (documentObject.DocId == 0) {
+      $('#filename-input').attr('placeholder', (template == 'resume' ? 'Untitled Resume' : 'Untitled Document'));
+      $('#filename-input-label').text(template == 'resume' ? 'Untitled Resume' : 'Untitled Document');
       generateHTMLContent('preview');
     }
-      
-    
+
+
 
   });
-  
-
-  function createFile(){
-    if(documentObject.DocId==0){
-        showSyncStatus('arrow-repeat','Creating New File ...',true);
-        // CREATE NEW FILE 
-        //http://techdocs-api.previewbox.in/api/filecreate
-
-        axios.post(getApiUrl('filecreate'),documentObject).then(function(response){
-          documentObject.DocId=response.data.DocId;
-          $('#filename-input').prop('disabled',true);
-          showSyncStatus('check','New Document Created',false,false);
-        }).catch(function(error){
-          showSyncStatus('bug-fill','Error While Creating File',false,true);
-          
-        });
 
 
-   }
-  }
+  function createFile() {
+    if (documentObject.DocId == 0) {
+      showSyncStatus('arrow-repeat', 'Creating New File ...', true);
+      // CREATE NEW FILE 
+      //http://techdocs-api.previewbox.in/api/filecreate
 
-  function saveFile(){
-   console.log('---savingfile-------',documentObject);
-   
-   
-   
-   if(documentObject.DocId!=0){
-        showSyncStatus('arrow-repeat','Updating File ...',true);
-        // UPDATE FILE 
-        //http://techdocs-api.previewbox.in/api/filemodify
+      axios.post(getApiUrl('filecreate'), documentObject).then(function (response) {
+        documentObject.DocId = response.data.DocId;
+        $('#filename-input').prop('disabled', true);
+        showSyncStatus('check', 'New Document Created', false, false);
+      }).catch(function (error) {
+        showSyncStatus('bug-fill', 'Error While Creating File', false, true);
 
-        axios.post(getApiUrl('filemodify'),documentObject).then(function(response){
-          documentObject.DocId=response.data.DocId;
-          showSyncStatus('check','Synced',false,false);
-        }).catch(function(error){
-          showSyncStatus('bug-fill','Error While Updating File',false,true);
-          
-        });
-   }
- 
-    
-
-  }
+      });
 
 
-  function generateHTMLContent(type){
-      console.log('---generating-html-content---');
-      var text = $editor.value;
-      var generator = new latexjs.HtmlGenerator({ hyphenate: false });
-      lDoc = latexjs.parse(text, { generator: generator }).htmlDocument('https://cdn.jsdelivr.net/npm/latex.js@0.12.4/dist/');
-
-      $($htmlPreview).attr('srcDoc',lDoc.documentElement.outerHTML);
-      
-      if(type=='print'){
-        $htmlPreview.onload= function() {
-          var mywindow = window.open('', documentObject.DocName, 'height=400,width=600');
-          mywindow.document.write(lDoc.documentElement.outerHTML);
-          mywindow.print();
-          mywindow.close();
-          $htmlPreview.onload=function(){};
-        };
-      }
-      else saveFile()
-      
     }
+  }
+
+
+
+
+  function generateHTMLContent(type) {
+    console.log('---generating-html-content---');
+    var text = $editor.value;
+    var generator = new latexjs.HtmlGenerator({ hyphenate: false });
+    lDoc = latexjs.parse(text, { generator: generator }).htmlDocument('https://cdn.jsdelivr.net/npm/latex.js@0.12.4/dist/');
+
+    $($htmlPreview).attr('srcDoc', lDoc.documentElement.outerHTML);
+
+    if (type == 'print') {
+      $htmlPreview.onload = function () {
+        var mywindow = window.open('', documentObject.DocName, 'height=400,width=600');
+        mywindow.document.write(lDoc.documentElement.outerHTML);
+        mywindow.print();
+        mywindow.close();
+        $htmlPreview.onload = function () { };
+      };
+    }
+    else saveFile()
+
+  }
 
 </script>
 
