added frontend backend connect for plagarism check

--- a/frontend/app/templates/editor-layout.html
+++ b/frontend/app/templates/editor-layout.html
@@ -75,15 +75,17 @@
       </div>
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-          <li class="nav-item"><a id="grammarCheckClick" data-bs-toggle="offcanvas" href="#offcanvasGrammarCheck"
+          <li class="nav-item" style="margin-top:auto;margin-bottom:auto" ><div>Plagarism <span id="plagarism-value"></span>% </div></li>
+          <li class="nav-item" style="margin-top:auto;margin-bottom:auto" ><canvas id="myChart" style="width:50px"></canvas></li>
+          <li class="nav-item" style="margin-top:auto;margin-bottom:auto"><a id="grammarCheckClick" data-bs-toggle="offcanvas" href="#offcanvasGrammarCheck"
               class="nav-link px-2 link-dark"><i class="bi bi-grammarcheck"></i> Grammar Check</a></li>
-          <li class="nav-item"><a id="button-pdf" class="nav-link px-2 link-dark"><i class="bi bi-download"></i>
+          <li class="nav-item" style="margin-top:auto;margin-bottom:auto"><a id="button-pdf" class="nav-link px-2 link-dark"><i class="bi bi-download"></i>
               Download as PDF</a></li>
-          <li class="nav-item"><a data-bs-toggle="offcanvas" href="#offcanvasAssets" class="nav-link px-2 link-dark"><i
+          <li class="nav-item" style="margin-top:auto;margin-bottom:auto"><a data-bs-toggle="offcanvas" href="#offcanvasAssets" class="nav-link px-2 link-dark"><i
                 class="bi bi-paperclip"></i> Assets</a></li>
-          <li class="nav-item"><a id="historyClick" data-bs-toggle="offcanvas" href="#offcanvasHistory"
-              class="nav-link px-2 link-dark"><i class="bi bi-clock-history"></i> History</a></li>
-          <li class="nav-item dropdown">
+          <li class="nav-item" style="margin-top:auto;margin-bottom:auto"><a id="historyClick" data-bs-toggle="offcanvas" href="#offcanvasHistory"
+              class="nav-link px-2 link-dark" style="margin-top:auto;margin-bottom:auto"><i class="bi bi-clock-history"></i> History</a></li>
+          <li class="nav-item dropdown" style="margin-top:auto;margin-bottom:auto">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <i class="bi bi-person-circle"></i> Account
             </a>
