--- a/frontend/app/templates/nav-bar.html
+++ b/frontend/app/templates/nav-bar.html
@@ -32,7 +32,7 @@
                                 <li><a class="dropdown-item" href="{{url_for('publisher')}}">For Publishers</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link px-2 link-dark" href="" onclick="window.location.href='{{url_for('plans')}}'">Subscription Plans</a>
+                        <li class="nav-item"><a class="nav-link px-2 link-dark" href="#pricing-section">Subscription Plans</a>
                         </li>
                         <li class="nav-item"><a href="" onclick="window.location.href='{{url_for('faq')}}'" class="nav-link px-2 link-dark">Help</a></li>
                         {% if session['user'] %}
