--- a/frontend/app/templates/home-page/home.html
+++ b/frontend/app/templates/home-page/home.html
@@ -16,9 +16,9 @@
 
 <div class="p-3 p-md-5 m-md-3 text-center bg-light">
     <div class="row">
-        <div class="col-md-3 p-lg-5 mx-auto my-5 mt-3" style="background-image:url({{url_for('static',filename="images/h2.png")}});height:400px;background-size:400px;background-repeat:no-repeat;">
+        <!-- <div class="col-md-3 p-lg-5 mx-auto my-5 mt-3" style="background-image:url({{url_for('static',filename="images2.png")}});height:400px;background-size:400px;background-repeat:no-repeat;">
             
-        </div>
+        </div> -->
         <div class="col-md-5 p-lg-5 mx-auto my-5 mt-3">
             <h1 class="display-4 fw-normal">TechDocs</h1>
             <p class="lead fw-normal">It is a dockerized, mobile-ready, offline-storage compatible, JS-powered Latex editor. </p>
