--- a/frontend/app/templates/nav-bar.html
+++ b/frontend/app/templates/nav-bar.html
@@ -3,7 +3,7 @@
 <form action="" method="post" name="profile" id="profileForm" enctype="multipart/form-data">
     <nav class="navbar navbar-expand-lg bg-light bd-navbar">
         <div class="container">
-            <a href="/home2" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
                 <img src="{{url_for('static',filename='images/icons/android-chrome-192x192.png')}}"
                     class="header-logo" />
                 <span class="header-text">TechDocs</span>
